--- a/style.css
+++ b/style.css
@@ -34,3 +34,12 @@
     margin-right: 16px;
     font-size: 18px;
 }
+.search button {
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+}
